# phase_align

./: CMakeLists.txt  README.md
inc/: phase_align.h
src/: phase_align.c
test/: le32.c  phase_align_1.c  phase_align_left_shift.c  phase_align_no_shift.c  phase_align_right_shift.c
